--- a/platforms/ios/Podfile
+++ b/platforms/ios/Podfile
@@ -3,11 +3,13 @@ pod 'ZendeskSDK'
 
 post_install do |installer|
     installer.pods_project.targets.each do |target|
-      target.build_configurations.each do |config|
-        config.build_settings['SWIFT_VERSION'] = '5.0.1'
-        config.build_settings['FRAMEWORK_SEARCH_PATHS'] = '$(inherited)'
-        config.build_settings['CLANG_ENABLE_MODULES'] = 'YES'
-        config.build_settings['ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES'] = 'YES'
-      end
+       if target.name == 'ZendeskSDK'
+          target.build_configurations.each do |config|
+            config.build_settings['SWIFT_VERSION'] = '5.0.1'
+            config.build_settings['FRAMEWORK_SEARCH_PATHS'] = '$(inherited)'
+            config.build_settings['CLANG_ENABLE_MODULES'] = 'YES'
+            config.build_settings['ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES'] = 'YES'
+          end
+       end
     end
   end
